--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
@@ -22,6 +23,7 @@
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^3.1.1",
+    "recharts": "^3.2.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
