--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^3.1.1",
@@ -57,4 +58,3 @@
     "tailwindcss": "^3.4.17"
   }
 }
-
