--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "8.17.1",
     "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
@@ -20,7 +21,6 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-quill": "^2.0.0",
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^3.1.1",
