--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-to-print": "^3.1.1",
     "recharts": "^3.2.1",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
