--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "leaflet": "^1.9.4",
+    "next": "^16.0.8",
     "qrcode.react": "^3.1.0",
-    "react": "^18.2.0",
+    "react": "^19.2.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.24.0",
@@ -59,5 +60,9 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6"
+  },
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom"
   }
 }
