--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dataconnect/generated": "file:src/dataconnect-generated",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^15.0.0",
@@ -12,11 +13,12 @@
     "date-fns": "^3.0.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
-    "firebase": "^10.12.0",
+    "firebase": "^10.14.1",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.561.0",
     "qrcode.react": "^3.1.0",
     "react": "^19.2.1",
     "react-chartjs-2": "^5.2.0",
