--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@dataconnect/generated": "file:src/dataconnect-generated",
+    "@openrouter/sdk": "^0.3.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^15.0.0",
@@ -14,6 +15,7 @@
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.14.1",
+    "framer-motion": "^12.23.26",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
@@ -25,6 +27,7 @@
     "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.15.1",
